# MonkeyTyper

./: CMakeLists.txt  Game.cpp  Game.h  Settings.cpp  Settings.h  UIComponents.cpp  UIComponents.h  main.cpp
txtFiles/: highScores.txt  savedGame.txt  words1.txt
